force-app/main/default/objects/Krow__Timesheet_Split__c/Krow__Timesheet_Split__c.object-meta.xml
<CustomObject>
    <label>Timesheet Split</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Timesheet Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>