force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Re-submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>