force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_Rate__c</fullName>
    <label>Deprecated1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>