force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Created_From_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Krow__Created_From_JIRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From JIRA</label>
    <type>Checkbox</type>
</CustomField>