force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Exclude_From_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_From_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Calculation</label>
    <type>Checkbox</type>
</CustomField>