force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Hold_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hold_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold for Billing</label>
    <type>Checkbox</type>
</CustomField>