force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__JIRA_Wroklog_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__JIRA_Wroklog_Id__c</fullName>
    <description>Stores the jira worklog id.</description>
    <inlineHelpText>Stores the jira worklog id.</inlineHelpText>
    <label>JIRA Worklog Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>