force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>