force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Assignment</label>
    <referenceTo>Krow__Project_Assignment__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>