force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>