force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Resource_Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Note__c</fullName>
    <label>Resource Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>