force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Task_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Time</label>
    <referenceTo>Krow__Task_Time__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>