force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Time_Comments__c.field-meta.xml
<CustomField>
    <fullName>Krow__Time_Comments__c</fullName>
    <label>Time Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>