force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Time_Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Time_Off_Type__c</fullName>
    <formula>TEXT(Krow__Timesheet_Detail__r.Krow__Time_Off__r.Krow__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Off Type</label>
    <type>Text</type>
</CustomField>