force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>Krow__Timesheet__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>