force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Timesheet_Detail__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Detail</label>
    <referenceTo>Krow__Timesheet_Detail__c</referenceTo>
    <relationshipLabel>Timesheet Splits</relationshipLabel>
    <relationshipName>Timesheet_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>