force-app/main/default/objects/Krow__Timesheet_Split__c/fields/Krow__Vendor_Paid__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Paid</label>
    <type>Checkbox</type>
</CustomField>