force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__either_be_excluded_or_should_have_TD.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__either_be_excluded_or_should_have_TD</fullName>
    <active>true</active>
    <description>Split should either be excluded from calculation or must have timesheet detail attached with it.</description>
    <errorConditionFormula>AND(ISNEW(),NOT(Krow__Exclude_From_Calculation__c),AND(ISBlank(Krow__Timesheet_Detail__c),ISBlank(Krow__Task_Time__c)))</errorConditionFormula>
    <errorMessage>Either timesheet detail or task time field must be filled or exclude from calculation must be checked</errorMessage>
</ValidationRule>