force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__Example.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Example</fullName>
    <active>false</active>
    <errorConditionFormula>Krow__Billable__c = FALSE</errorConditionFormula>
    <errorMessage>Timesheets must be all billable</errorMessage>
</ValidationRule>