force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__Project_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Project_Matching</fullName>
    <active>true</active>
    <description>If split is created from the timesheet detail, then project must be same as detail.</description>
    <errorConditionFormula>AND(NOT(ISBlank(Krow__Timesheet_Detail__c)), Krow__Timesheet_Detail__r.Krow__Project__c != Krow__Krow_Project__c)</errorConditionFormula>
    <errorMessage>Project must be same as timesheet detail.</errorMessage>
</ValidationRule>