force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__Task_Dont_Matching_Timesheet_Detail_task.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Task_Dont_Matching_Timesheet_Detail_task</fullName>
    <active>false</active>
    <description>If split is created from the timesheet detail, then task must be same as detail.</description>
    <errorConditionFormula>AND(NOT(ISBlank(Krow__Timesheet_Detail__c)), Krow__Timesheet_Detail__r.Krow__Task__c != Krow__Krow_Task__c)</errorConditionFormula>
    <errorMessage>Task must be same as timesheet detail.</errorMessage>
</ValidationRule>