force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__Task_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Task_Required</fullName>
    <active>true</active>
    <description>If custom settings Task required is ON then, Task field is required to save the timesheet.</description>
    <errorConditionFormula>AND($Setup.Krow__Krow_Timesheet_Configuration__c.Krow__Task_Required__c, AND(ISBLANK(Krow__Krow_Task__c), AND(AND(NOT(Krow__Exclude_From_Calculation__c), ISBLANK(Krow__Timesheet_Detail__c)), NOT(Krow__Timesheet_Detail__r.Krow__Is_From_PTO__c), NOT(Krow__Timesheet_Detail__r.Krow__Is_From_Holidays__c))))</errorConditionFormula>
    <errorMessage>Task field is required to save the timesheet.</errorMessage>
</ValidationRule>