force-app/main/default/objects/Krow__Timesheet_Split__c/validationRules/Krow__Timesheet_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Timesheet_Matching</fullName>
    <active>true</active>
    <description>If split is created from the timesheet detail, then timesheet master must be same as detail.</description>
    <errorConditionFormula>AND(NOT(ISBlank(Krow__Timesheet_Detail__c)), Krow__Timesheet_Detail__r.Krow__Timesheet__c != Krow__Timesheet__c)</errorConditionFormula>
    <errorMessage>Timesheet master must be same as timesheet detail.</errorMessage>
</ValidationRule>